ncc/testsuite/negative/calling.n
class M {
  static f () : void { u (1) } // E: in arg #1 needed.*

  static u (_ : string) : void { } // OK

  static g () : void { 1 () }    // E: called value has non-functional type .*

  static h () : void { M.g(2) }    // E: .*needed 0 parameters, got 1

  static p (params _ : array <int>)  : void {} // OK

  static foo () : void {
    def x = System.Text.StringBuilder ();
    def _ = x.Chars;            // E: indexer property `Chars' used as first class value
    x.Chars (0) = 'a';         // E: attempt to call an indexer property `Chars'
    
    p (3); // OK
    mutable q = 3;
    p (ref q); // E: .*was passed as ref/out
    p ("foo"); // E: .*needed int got string

    ignore (4, 4);              // E: error: macro `ignore' expects following list 
  }
}
